<resources>
    <string name="app_name">SignPDF</string>


    <!-- Activities -->
    <string name="settings">Configuración</string>

    <!-- Actions -->
    <string name="action_cancel">Cancelar</string>
    <string name="action_delete">Borrar</string>
    <string name="action_sign">Firmar</string>
    <string name="action_close">Cerrar</string>
    <string name="action_back">Atrás</string>

    <!-- Modes -->
    <string name="hand_mode">Moverse por el PDF</string>
    <string name="pencil_mode">Firma con lápiz</string>

    <!-- Hints -->
    <string name="label_hint">Toca con el dedo donde quieres firmar</string>
    <string name="title_sign">Firma con el dedo en el cuadro blanco</string>
    <string name="view_pdf">Visualizar PDF</string>
    <string name="sign_size">Tamaño de la firma:</string>
    <string name="sign_color">Color de la firma:</string>
    <string name="options">Opciones</string>

    <!-- File -->
    <string name="select_file">Seleccionar archivo…</string>
    <string name="file_selected">Archivo seleccionado</string>
    <string name="file_not_found">Archivo no encontrado</string>
    <string name="error_file">Archivo no encontrado</string>

    <!-- Pages -->
    <string name="page_info">Página: %1$d / %2$d</string>
    <string name="prev_page">Página anterior</string>
    <string name="next_page">Siguiente página</string>
    <string name="sign_current_page">Firmar página actual</string>
    <string name="sign_all_pages">Firmar todas las páginas</string>

    <!-- Save -->
    <string name="error_empty_name">El nombre no puede estar vacío</string>
    <string name="save_pdf">Guardar PDF</string>
    <string name="save">Guardar</string>
    <string name="file_saved">Archivo guardado en: %1$s</string>
    <string name="error_saving_file">Error al guardar el archivo</string>

    <!-- Show -->
    <string name="sign_another">Firmar otro</string>
    <string name="sign_again">Firmar de nuevo</string>
    <string name="share">Compartir</string>
    <string name="share_via">Enviar PDF con…</string>

    <!-- Colors -->
    <string name="black">Negro</string>
    <string name="red">Rojo</string>
    <string name="blue">Azul</string>
    <string name="green">Verde</string>


</resources>
