<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_large">

    <LinearLayout
        android:id="@+id/linear_page"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btn_prev_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:contentDescription="@string/prev_page"
            android:src="@drawable/ic_back"
            app:tint="@color/black" />

        <TextView
            android:id="@+id/tv_page_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_large"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_large"
            tools:text="Page 1/1" />

        <ImageButton
            android:id="@+id/btn_next_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:contentDescription="@string/next_page"
            android:src="@drawable/ic_forward"
            app:tint="@color/black" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/ib_home"
        android:layout_width="wrap_content"
        android:layout_height="?attr/actionBarSize"
        android:background="@null"
        android:contentDescription="@string/action_back"
        android:src="@drawable/ic_home"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_small"
        app:cardCornerRadius="@dimen/cardview_default_radius"
        app:cardElevation="@dimen/cardview_default_elevation"
        app:layout_constraintBottom_toTopOf="@id/btn_sign"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_page">

        <com.github.chrisbanes.photoview.PhotoView
            android:id="@+id/iv_pdf"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/view_pdf"
            android:scaleType="fitXY" />

        <ImageView
            android:id="@+id/iv_pencil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/action_sign"
            android:src="@drawable/ic_edit"
            android:visibility="invisible" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:padding="@dimen/margin_medium"
        android:text="@string/label_hint"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_xsmall"
        android:drawableStart="@drawable/ic_delete"
        android:text="@string/action_sign"
        android:visibility="invisible"
        android:gravity="center"
        app:icon="@drawable/ic_edit"
        tools:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
