<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linear_page"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btn_prev_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:contentDescription="@string/prev_page"
            android:src="@drawable/ic_back"
            app:tint="@color/black" />

        <TextView
            android:id="@+id/tv_page_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_large"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_large"
            tools:text="Page 1/1" />

        <ImageButton
            android:id="@+id/btn_next_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:contentDescription="@string/next_page"
            android:src="@drawable/ic_forward"
            app:tint="@color/black" />
    </LinearLayout>


    <com.github.chrisbanes.photoview.PhotoView
        android:id="@+id/pdfView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/margin_medium"
        app:layout_constraintBottom_toTopOf="@id/linear_actions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_page" />

    <LinearLayout
        android:id="@+id/linear_actions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_signAnother"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_small"
            android:layout_weight="1"
            android:text="@string/sign_another"
            android:textSize="@dimen/text_size_small"
            app:icon="@drawable/ic_edit" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_signAgain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_small"
            android:layout_weight="1"
            android:text="@string/sign_again"
            android:textSize="@dimen/text_size_small"
            app:icon="@drawable/ic_again" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_small"
            android:layout_weight="1"
            android:text="@string/share"
            android:textSize="@dimen/text_size_small"
            app:icon="@drawable/ic_share" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
