<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/margin_medium">

    <TextView
        android:id="@+id/tv_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/margin_small"
        android:text="@string/title_sign"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/fl"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@color/light"
        android:padding="@dimen/margin_small"
        app:cardCornerRadius="@dimen/cardview_default_radius"
        app:cardElevation="@dimen/cardview_default_elevation"
        app:layout_constraintTop_toBottomOf="@id/tv_hint">

        <com.chemecador.signpdf.ui.view.util.DrawingView
            android:id="@+id/drawingView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ImageButton
            android:id="@+id/ib_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|end"
            android:layout_margin="@dimen/margin_small"
            android:background="@color/white"
            android:contentDescription="@string/action_delete"
            android:padding="@dimen/margin_small"
            android:src="@drawable/ic_delete"
            android:visibility="gone"
            tools:visibility="visible" />
    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_xsmall"
        android:layout_marginTop="@dimen/margin_large"
        android:drawableStart="@drawable/ic_delete"
        android:text="@string/action_cancel"
        app:icon="@drawable/ic_delete"
        app:layout_constraintEnd_toStartOf="@id/btn_finish"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fl" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_finish"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_xsmall"
        android:drawableStart="@drawable/ic_delete"
        android:text="@string/action_sign"
        app:icon="@drawable/ic_edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_cancel" />
</androidx.constraintlayout.widget.ConstraintLayout>
